Updated OVPN_LOCAL_NETWORK item

--- a/.envblank
+++ b/.envblank
@@ -19,7 +19,7 @@ PLEX_TRANSCODE=</root/path/to/config>Plex/transcode
 PIA_CONFIGS=<comma separated list of OVPN configs>
 PIA_USERNAME=<PIA username>
 PIA_PASSWORD=<PIA password>
-OVPN_LOCAL_NETWORK=192.168.0.0/16
+OVPN_LOCAL_NETWORK=<IP/netmask of local network broadened to include the docker media-network, e.g. 192.168.0.0/16>
 TRAN_DOWNLOAD_DIR=/data/<name of download folder>
 TRAN_INCOMPLETE_DIR=/data/<name of incomplete folder>
 TRAN_WATCH_DIR=/data/<name of torrent black hold folder (if you want to use it)>
